--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,8 @@
     </style>
 
     <div id="main">
-        <h1>{Hello World}</h1>
-        <h3>Everything is working fine. 🚀</h3>
+        <h1>{Post Message}</h1>
+        <h3>App is working fine. 🚀</h3>
     </div>
 </body>
 
