ci: Added action to publish image to GHCR

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="main">
-        <h1>{Post Message}</h1>
+        <h1>{Post My Message}</h1>
         <h3>API is working fine. 🚀</h3>
     </div>
 </body>
